traces/bug_195.txt
examples++-load/scotch.cpp:148: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/scotch.cpp:148:1: initialization of callDoLoadInit
146.   }
147.   
148. > LOADFUNC(Init_Scotch)
149.   #endif

examples++-load/scotch.cpp:148:1: call to DoLoadInit
146.   }
147.   
148. > LOADFUNC(Init_Scotch)
149.   #endif

examples++-load/scotch.cpp:148:1: call to addInitFunct
  146.   }
  147.   
  148. > LOADFUNC(Init_Scotch)
  149.   #endif

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
